cmake_minimum_required(VERSION 3.14)
project(abc)

set(CMAKE_CXX_STANDARD 14)

# Contest abc 197
add_executable(197_a 197/a.cpp)
add_executable(197_b 197/b.cpp)
add_executable(197_c 197/c.cpp)
add_executable(197_d 197/d.cpp)
add_executable(197_e 197/e.cpp)
add_executable(197_f 197/f.cpp)

# Contest abc 196
add_executable(196_a 196/a.cpp)
add_executable(196_b 196/b.cpp)
add_executable(196_c 196/c.cpp)
add_executable(196_d 196/d.cpp)
add_executable(196_e 196/e.cpp)
add_executable(196_f 196/f.cpp)

# Contest abc 130
add_executable(130_a 130/a.cpp)
add_executable(130_b 130/b.cpp)
add_executable(130_c 130/c.cpp)
add_executable(130_d 130/d.cpp)
add_executable(130_e 130/e.cpp)
add_executable(130_f 130/f.cpp)



# Contest abc 216
add_executable(216_a 216/a.cpp)
add_executable(216_b 216/b.cpp)
add_executable(216_c 216/c.cpp)
add_executable(216_d 216/d.cpp)
add_executable(216_e 216/e.cpp)
add_executable(216_e-2 216/e-2.cpp)
add_executable(216_f 216/f.cpp)
add_executable(216_g 216/g.cpp)
add_executable(216_h 216/h.cpp)

# Contest abc 217
add_executable(217_a 217/a.cpp)
add_executable(217_b 217/b.cpp)
add_executable(217_c 217/c.cpp)
add_executable(217_d 217/d.cpp)
add_executable(217_e 217/e.cpp)
add_executable(217_f 217/f.cpp)
add_executable(217_g 217/g.cpp)
add_executable(217_h 217/h.cpp)

# Contest abc 099
add_executable(099_a 099/a.cpp)
add_executable(099_b 099/b.cpp)
add_executable(099_c 099/c.cpp)
add_executable(099_c-morau 099/c-morau.cpp)
add_executable(099_c-kubaru 099/c-kubaru.cpp)
add_executable(099_c-bfs 099/c-bfs.cpp)
add_executable(099_c-dijkstra 099/c-dijkstra.cpp)

add_executable(099_d 099/d.cpp)
add_executable(099_e 099/e.cpp)
add_executable(099_f 099/f.cpp)
add_executable(099_g 099/g.cpp)
add_executable(099_h 099/h.cpp)
