cmake_minimum_required(VERSION 3.14)
project(aoj)

set(CMAKE_CXX_STANDARD 14)


# Contest aoj ITP1
add_executable(ITP1_1_a ITP1/1_a.cpp)
add_executable(ITP1_1_b ITP1/1_b.cpp)
add_executable(ITP1_1_c ITP1/1_c.cpp)
add_executable(ITP1_1_d ITP1/1_d.cpp)
add_executable(ITP1_2_a ITP1/2_a.cpp)
add_executable(ITP1_2_b ITP1/2_b.cpp)
add_executable(ITP1_2_c ITP1/2_c.cpp)
add_executable(ITP1_2_d ITP1/2_d.cpp)
add_executable(ITP1_3_a ITP1/3_a.cpp)
add_executable(ITP1_3_b ITP1/3_b.cpp)
add_executable(ITP1_3_c ITP1/3_c.cpp)
add_executable(ITP1_3_d ITP1/3_d.cpp)
add_executable(ITP1_4_a ITP1/4_a.cpp)
add_executable(ITP1_4_b ITP1/4_b.cpp)
add_executable(ITP1_4_c ITP1/4_c.cpp)
add_executable(ITP1_4_d ITP1/4_d.cpp)
add_executable(ITP1_5_a ITP1/5_a.cpp)
add_executable(ITP1_5_b ITP1/5_b.cpp)
add_executable(ITP1_5_c ITP1/5_c.cpp)
add_executable(ITP1_5_d ITP1/5_d.cpp)
add_executable(ITP1_6_a ITP1/6_a.cpp)
add_executable(ITP1_6_b ITP1/6_b.cpp)
add_executable(ITP1_6_c ITP1/6_c.cpp)
add_executable(ITP1_6_d ITP1/6_d.cpp)
add_executable(ITP1_7_a ITP1/7_a.cpp)
add_executable(ITP1_7_b ITP1/7_b.cpp)
add_executable(ITP1_7_c ITP1/7_c.cpp)
add_executable(ITP1_7_d ITP1/7_d.cpp)
add_executable(ITP1_8_a ITP1/8_a.cpp)
add_executable(ITP1_8_b ITP1/8_b.cpp)
add_executable(ITP1_8_c ITP1/8_c.cpp)
add_executable(ITP1_8_d ITP1/8_d.cpp)
add_executable(ITP1_9_a ITP1/9_a.cpp)
add_executable(ITP1_9_b ITP1/9_b.cpp)
add_executable(ITP1_9_c ITP1/9_c.cpp)
add_executable(ITP1_9_d ITP1/9_d.cpp)
add_executable(ITP1_10_a ITP1/10_a.cpp)
add_executable(ITP1_10_b ITP1/10_b.cpp)
add_executable(ITP1_10_c ITP1/10_c.cpp)
add_executable(ITP1_10_d ITP1/10_d.cpp)
