cmake_minimum_required(VERSION 3.19)
project(ed_90)

set(CMAKE_CXX_STANDARD 20)


# Contest ed_90
add_executable(ed_90_1 1.cpp)
add_executable(ed_90_2 2.cpp)
add_executable(ed_90_3 3.cpp)
add_executable(ed_90_3_bfs 3-bfs.cpp)
add_executable(ed_90_4 4.cpp)
add_executable(ed_90_5 5.cpp)
add_executable(ed_90_6 6.cpp)
add_executable(ed_90_7 7.cpp)
add_executable(ed_90_8 8.cpp)
add_executable(ed_90_9 9.cpp)
add_executable(ed_90_10 10.cpp)
add_executable(ed_90_11 11.cpp)
add_executable(ed_90_12 12.cpp)
add_executable(ed_90_13 13.cpp)
add_executable(ed_90_14 14.cpp)
add_executable(ed_90_15 15.cpp)
add_executable(ed_90_16 16.cpp)
add_executable(ed_90_17 17.cpp)
add_executable(ed_90_18 18.cpp)
add_executable(ed_90_19 19.cpp)
add_executable(ed_90_20 20.cpp)
add_executable(ed_90_21 21.cpp)
add_executable(ed_90_22 22.cpp)
add_executable(ed_90_23 23.cpp)
add_executable(ed_90_24 24.cpp)
add_executable(ed_90_25 25.cpp)
add_executable(ed_90_26 26.cpp)
add_executable(ed_90_27 27.cpp)
add_executable(ed_90_28 28.cpp)
add_executable(ed_90_29 29.cpp)
add_executable(ed_90_30 30.cpp)
add_executable(ed_90_31 31.cpp)
add_executable(ed_90_32 32.cpp)
add_executable(ed_90_33 33.cpp)
add_executable(ed_90_34 34.cpp)
add_executable(ed_90_35 35.cpp)
add_executable(ed_90_36 36.cpp)
add_executable(ed_90_37 37.cpp)
add_executable(ed_90_38 38.cpp)
add_executable(ed_90_39 39.cpp)
add_executable(ed_90_40 40.cpp)
add_executable(ed_90_41 41.cpp)
add_executable(ed_90_42 42.cpp)
add_executable(ed_90_43 43.cpp)
add_executable(ed_90_44 44.cpp)
add_executable(ed_90_45 45.cpp)
add_executable(ed_90_46 46.cpp)
add_executable(ed_90_47 47.cpp)
add_executable(ed_90_48 48.cpp)
add_executable(ed_90_49 49.cpp)
add_executable(ed_90_50 50.cpp)
add_executable(ed_90_51 51.cpp)
add_executable(ed_90_52 52.cpp)
add_executable(ed_90_53 53.cpp)
add_executable(ed_90_54 54.cpp)
add_executable(ed_90_55 55.cpp)
add_executable(ed_90_56 56.cpp)
add_executable(ed_90_57 57.cpp)
add_executable(ed_90_58 58.cpp)
add_executable(ed_90_59 59.cpp)
add_executable(ed_90_60 60.cpp)
add_executable(ed_90_61 61.cpp)
add_executable(ed_90_62 62.cpp)
add_executable(ed_90_63 63.cpp)
add_executable(ed_90_64 64.cpp)
add_executable(ed_90_65 65.cpp)
add_executable(ed_90_66 66.cpp)
add_executable(ed_90_67 67.cpp)
add_executable(ed_90_68 68.cpp)
add_executable(ed_90_69 69.cpp)
add_executable(ed_90_70 70.cpp)
add_executable(ed_90_71 71.cpp)
add_executable(ed_90_72 72.cpp)
add_executable(ed_90_73 73.cpp)
add_executable(ed_90_74 74.cpp)
add_executable(ed_90_75 75.cpp)
add_executable(ed_90_76 76.cpp)
add_executable(ed_90_77 77.cpp)
add_executable(ed_90_78 78.cpp)
add_executable(ed_90_79 79.cpp)
add_executable(ed_90_80 80.cpp)
add_executable(ed_90_81 81.cpp)
add_executable(ed_90_82 82.cpp)
add_executable(ed_90_83 83.cpp)
add_executable(ed_90_84 84.cpp)
add_executable(ed_90_85 85.cpp)
add_executable(ed_90_86 86.cpp)
add_executable(ed_90_87 87.cpp)
add_executable(ed_90_88 88.cpp)
add_executable(ed_90_89 89.cpp)
add_executable(ed_90_90 90.cpp)
